# suPAErnova_legacy

./: .gitconfig  .gitignore  README.md  pyproject.toml
config/: train.yaml
notebooks/: plots_and_analysis.ipynb  salt_model_make_dataset.ipynb
src/supaernova_legacy/make_datasets/: make_train_test_data.py
src/supaernova_legacy/models/: autoencoder.py  autoencoder_training.py  flow_training.py  flows.py  loader.py  losses.py  posterior.py  posterior_analysis.py
src/supaernova_legacy/scripts/: prep_data.py  run_posterior_analysis.py  train_ae.py  train_flow.py
src/supaernova_legacy/utils/: YParams.py  calculations.py  data_loader.py  plotting.py
