[project]
authors = [
    { name = "Patrick Armstrong", email = "patrick.james.1998@gmail.com" },
]
description = "Add your description here"
name = "supaernova_legacy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = ["ruamel-yaml>=0.18.10", "tensorflow>=2.19.0"]

[project.scripts]
supaernova-legacy = "supaernova_legacy:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
# Enumerate all fixed violations.
show-fixes = true

# Disable application of unsafe fixes.
unsafe-fixes = true

# --- Format: Ruff ---
[tool.ruff.format]
# Enable preview style formatting
preview = true

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
# Enable preview features
preview = true

# Show all lint rules (except preview) by default
select = ["ALL"]

# Rules to ignore
ignore = [
    "COM812",  # Missing trailing comma, already handled by formatter
    "E501",    # Line too long 
    "ERA001",  # Found commented out code
    "G004",    # Logging statement uses f-string
    "N999",    # Invalid module name
    "PLR0913", # Too many arguments in function definition (_ > 5) 
    "PLR0917", # Too many positional arguments (_/5) 
    "ANN401",  # Allow *args: Any and **kwargs: Any
    "UP037",   # Don't remove quotes from type annotations
    "TC008",   # Don't remove quotes from type aliases
    "F722",    # Ignore forward annotation syntax errors
]

# Consider all rules fixable
fixable = ["ALL"]

# Except these rules
unfixable = [
    "F401", # unused-import, will remove unused imports
    "F841", # unused-variable, will remove unused variables not prepended with an `_`
    "T201", # Print statements
]

# --- Flake8 ---
# Copyright Author
[tool.ruff.lint.flake8-copyright]
author = "Patrick Armstrong"


# Type Checking
[tool.ruff.lint.flake8-type-checking]
# Move type-specific imports into an if statement
# By placing some type annotations in quotes
quote-annotations = true
# Be strict with type-specific imports
strict = true

# --- ISort ---
[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
from-first = true
length-sort = true
length-sort-straight = true

# --- PyDocStyle ---
[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]
